force-app/main/default/objects/SustainabilityProject__c/SustainabilityProject__c.object-meta.xml
<CustomObject>
    <description>Represents a sustainability project for GreenFuture CRM.</description>
    <label>Sustainability Project</label>
    <nameField>
        <label>Sustainability Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sustainability Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>