force-app/main/default/objects/SustainabilityProject__c/fields/ProjectBudget__c.field-meta.xml
<CustomField>
    <fullName>ProjectBudget__c</fullName>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
    <inlineHelpText>optional</inlineHelpText>
    <required>true</required>
    <description>Budget allocated</description>
    <label>Project Budget</label>
</CustomField>