force-app/main/default/objects/SustainabilityProject__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Project start date</description>
    <inlineHelpText>Enter the project start date to track timelines</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>